--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.5.0",
+    "ant-design-vue": "^2.0.1",
     "core-js": "^3.6.5",
-    "element-plus": "^1.0.2-beta.32",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
