--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.5.0",
+    "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.0.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
