--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.0.1",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
