--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@ant-design/icons-vue": "^6.0.1",
     "ant-design-vue": "^2.0.1",
     "core-js": "^3.6.5",
-    "js-cookie": "^3.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.7",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
