--- a/package.json
+++ b/package.json
@@ -6,15 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "concurrently \"yarn serve\" \"nodemon node-server/index.js\" "
+    "start": "concurrently \"yarn serve\" \"NeteaseCloudMusicApi npm run start\" "
   },
   "dependencies": {
-    "@ant-design/icons-vue": "^6.0.1",
-    "@types/spotify-web-api-node": "^5.0.3",
-    "ant-design-vue": "^2.2.8",
     "axios": "^0.23.0",
     "qs": "^6.10.1",
-    "spotify-web-api-node": "^5.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
@@ -29,11 +25,11 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "concurrently": "^6.3.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^6.0.0",
+    "naive-ui": "^2.19.11",
     "style-resources-loader": "^1.4.1",
     "typescript": "~4.1.5",
     "vue-cli-plugin-style-resources-loader": "~0.1.5"
