--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "axios": "^0.23.0",
     "nprogress": "^0.2.0",
+    "pinia": "^2.0.2",
     "qs": "^6.10.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/qs": "^6.9.7",
