--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.0.2",
     "qs": "^6.10.1",
+    "swiper": "6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
