--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.7",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
