♻️refactor:add license

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wordle-vue",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
