--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "lodash": "^4.17.21",
+    "naive-ui": "^2.25.2",
     "vue": "^3.2.16"
   },
   "devDependencies": {
